tests/baselines/reference/blockScopedFunctionDeclarationES6.errors.txt
blockScopedFunctionDeclarationES6.ts(5,1): error TS2304: Cannot find name 'foo'.


==== blockScopedFunctionDeclarationES6.ts (1 errors) ====
    if (true) {
        function foo() { }
        foo();
    }
    foo();
    ~~~
!!! error TS2304: Cannot find name 'foo'.